# dxframework

./: .gitignore  .gitmodules
GraphicsDX11/: GraphicsDX11.sln
dxframework/: CMakeLists.txt
dxframework/dxframework/: CmakeLists.txt
dxframework/dxframework/include/dxframework/: camera.hpp  color.hpp  constant_buffer_types.hpp  cube_component.hpp  display.hpp  earth_component.hpp  floor_component.hpp  fruit_component.hpp  game.hpp  game_component.hpp  guitar_component.hpp  input_device.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  sun_component.hpp  texture.hpp  timer.hpp  transform.hpp  triangle_component.hpp  triangles_game.hpp  types.hpp  utils.hpp  vertex.hpp
dxframework/dxframework/models/cube/: Untitled.3mf
dxframework/dxframework/models/earth/: Untitled.mtl
dxframework/dxframework/models/floor/: Untitled.3mf  Untitled.mtl
dxframework/dxframework/models/floor3/: Untitled.mtl
dxframework/dxframework/models/guitar/: guitar.mtl
dxframework/dxframework/models/rubik/: rubik.fbx
dxframework/dxframework/models/sunn/: Untitled.mtl
dxframework/dxframework/models/sunnn/: Untitled.gltf
dxframework/dxframework/shaders/: ps.hlsl  triangle_ps.hlsl  triangle_vs.hlsl  vs.hlsl
dxframework/dxframework/source/: camera.cpp  cube_component.cpp  display.cpp  earth_component.cpp  floor_component.cpp  fruit_component.cpp  game.cpp  game_component.cpp  guitar_component.cpp  input_device.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  sun_component.cpp  texture.cpp  timer.cpp  transform.cpp  triangle_component.cpp  triangles_game.cpp  utils.cpp
(+42 files in other folders)
